--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,42 +49,36 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    //-------------------------------------------------------------------------------------
-    //-------------------------------------------------------------------------------------
-    //-------------------------------------------------------------------------------------
-    //    compile 'com.jude:easyrecyclerview:4.2.1'
+    testCompile 'junit:junit:4.12'
+    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support.constraint:constraint-layout:1.0.1'
+    compile 'com.android.support:design:25.1.0'
+    compile 'com.android.support:cardview-v7:25.1.0'
+    compile 'com.android.support:recyclerview-v7:25.1.0'
 
-    //-------------------------------------------------------------------------------------
-    //-------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //-------------------------------------------------------------------------------------
-    //    compile 'com.squareup.retrofit2:converter-simplexml:2.1.0'
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.jakewharton:butterknife:8.6.0'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    compile 'com.blankj:utilcode:1.3.5'
+    compile 'com.orhanobut:logger:1.15'
+
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.5.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
     compile('com.squareup.retrofit2:converter-simplexml:2.1.0') {
         exclude module: 'stax-api'
         exclude module: 'stax'
         exclude module: 'xpp3'
     }
-    //-------------------------------------------------------------------------------------
-    //    compile 'com.github.xxl6097:okhttputils:2.4.1'
 
-    //-------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    //------------------------------------------------------------------------------------------
-    compile project(':vitamio')
-    compile project(':MobShare_2_8_0')
-    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    compile 'com.android.support:appcompat-v7:25.1.0'
-    compile 'com.android.support:design:25.1.0'
-    compile 'com.android.support:cardview-v7:25.1.0'
-    compile 'com.android.support:recyclerview-v7:25.1.0'
     compile 'com.jude:beam:3.0.1'
     compile 'com.jude:utils:1.2.1'
     compile 'com.jude:rollviewpager:1.4.5'
@@ -96,31 +90,14 @@ dependencies {
     compile 'io.reactivex:rxjava:1.2.4'
     compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
     compile 'com.tbruyelle.rxpermissions:rxpermissions:0.9.0@aar'
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
-    compile 'com.squareup.okhttp3:okhttp:3.5.0'
-    compile 'com.squareup.okhttp3:logging-interceptor:3.5.0'
-    compile 'com.squareup.okio:okio:1.11.0'
-    compile 'com.orhanobut:logger:1.15'
-    compile 'com.jakewharton:butterknife:8.6.0'
-    compile 'com.nineoldandroids:library:2.4.0'
-    compile 'com.daimajia.easing:library:1.0.2@aar'
-    compile 'com.daimajia.androidanimations:library:1.1.3@aar'
+    compile 'com.daimajia.androidanimations:library:2.2@aar'
     compile 'jp.wasabeef:recyclerview-animators:2.2.5'
     compile 'org.sufficientlysecure:html-textview:2.0'
     compile 'org.greenrobot:greendao:3.2.0'
-    compile 'org.greenrobot:eventbus:3.0.0'
-    compile 'com.kelin.mvvmlight:library:1.0.0'
-    compile 'com.blankj:utilcode:1.3.5'
-    compile 'com.google.guava:guava:20.0'
     compile 'uk.co.chrisjenx:calligraphy:2.3.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.1'
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
-    annotationProcessor 'com.jakewharton:butterknife-compiler:8.6.0'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5'
+    compile 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    compile project(':vitamio')
+    compile project(':MobShare_2_8_0')
 }
 repositories {
     mavenCentral()
